--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,16 +14,37 @@
             android:layout_height="wrap_content"
             android:text="이메일 주소" />
 
-        <EditText
-            android:id="@+id/edtEmail"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="이메일 주소"
-            android:inputType="textEmailAddress" />
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edtEmail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="이메일 주소"
+                android:inputType="textEmailAddress" />
+
+            <Button
+                android:id="@+id/btnEmailCheck"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="중복확인" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txtEmailCheckResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이메일 중복검사를 해주세요." />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="비밀번호" />
 
         <EditText
