비밀번호 확인까지 실제로 검사

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -51,12 +51,38 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="비밀번호"
+            android:hint="비밀번호 8자리 이상"
             android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/txtPasswordCheckResult1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="8자리 이상이어야 합니다." />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="비밀번호 확인" />
+
+        <EditText
+            android:id="@+id/edtPasswordRepeat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="비밀번호를 다시 입력해주세요."
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/txtPasswordCheckResult2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호가 서로 일치해야합니다." />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="닉네임" />
 
         <EditText
