카카오톡 로그인 화면 불러내기 및 토큰 추출  - 토큰 가지고서 -> 카카오톡 API에 내 정보 요청해야 함

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,30 +48,57 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="소셜로그인으로 편하게 로그인해보세요." />
+                android:text="소셜로그인으로 편하게 로그인 해보세요." />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnFacebookLogin"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/facebook_logo" />
-
-                <TextView
+                <LinearLayout
+                    android:id="@+id/btnFacebookLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="페북로그인" />
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/facebook_logo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="페북로그인" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btnKakaoLogin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/kakao_logo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="카톡로그인" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
