--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -7,8 +7,8 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/productListRecyclerView"
+        <ListView
+            android:id="@+id/productListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
