--- a/app/src/main/res/layout/fragment_review_list.xml
+++ b/app/src/main/res/layout/fragment_review_list.xml
@@ -7,16 +7,10 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="여기는 리뷰 목록 자리" />
-
-        <Button
-            android:id="@+id/btnToast"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="토스트 띄우기" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/categoryListRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
