--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -22,6 +22,7 @@
                 app:civ_border_width="2dp" />
 
             <LinearLayout
+                android:id="@+id/btnEditNickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -40,6 +41,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:text="본인닉네임" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="5dp"
+                    android:src="@drawable/edit_icon" />
 
             </LinearLayout>
 
