--- a/app/src/main/res/layout/my_custom_alert_edit_nickname.xml
+++ b/app/src/main/res/layout/my_custom_alert_edit_nickname.xml
@@ -2,12 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="사용할 닉네임" />
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <EditText
         android:id="@+id/edtNickname"
