작성 일시 (서버가 주는 일/시 데이터 파싱) UI 추가

--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -24,10 +24,16 @@
         android:text="평점 자리 (4.5)" />
 
     <TextView
+        android:id="@+id/txtCreatedAt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="작성일시 (2021.11.25 오후 3:05)" />
+
+    <TextView
         android:id="@+id/txtUserNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="작성자닉네임" />
+        android:text="작성자 닉네임" />
 
     <TextView
         android:id="@+id/txtProductName"
