태그 추가 시 줄넘침 공간 및 '#' 첨부 표시

--- a/app/src/main/res/layout/activity_edit_review.xml
+++ b/app/src/main/res/layout/activity_edit_review.xml
@@ -92,7 +92,8 @@
             android:id="@+id/tagListLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            app:flRowSpacing="5dp">
 
         </com.nex3z.flowlayout.FlowLayout>
 
