--- a/app/src/main/res/layout/tag_list_item.xml
+++ b/app/src/main/res/layout/tag_list_item.xml
@@ -8,8 +8,9 @@
         android:id="@+id/txtTag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/tag_box"
         android:padding="5dp"
-        android:text="태그내용" />
+        android:text="태그 내용" />
 
 </LinearLayout>
