ItemViewHolder 실제 처리  - onBindViewHolder -> holder의 인스턴스가 어떤 종류인가? (is 연산자 검사)

--- a/app/src/main/res/layout/main_recycler_item_review_item.xml
+++ b/app/src/main/res/layout/main_recycler_item_review_item.xml
@@ -6,6 +6,7 @@
     android:padding="20dp">
 
     <TextView
+        android:id="@+id/txtReviewProductName"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/gray_c4"
@@ -22,6 +23,7 @@
         android:padding="12dp">
 
         <TextView
+            android:id="@+id/txtReviewerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="리뷰어 이름"
@@ -29,6 +31,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/imgProductImg"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginTop="5dp"
