--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/mainBottomNavView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:menu="@menu/navigation_menu" />
 
     </LinearLayout>
 
